--- a/onepage/css/mastar.css
+++ b/onepage/css/mastar.css
@@ -8,7 +8,10 @@
 
 
 
-
+.logo a img{
+    width: 78px;
+    height: 68px;
+}
 .bg-black{
     background-color: rgba(0,0,0,0.5);
     /* position: absolute; */
@@ -173,7 +176,8 @@
 /* section02	 */
 #section03{
     width:100%;     
-    background:#9F0;
+    /* background:#9F0; */
+    font-family: 'Binggrae';
 }
 
 .mi{
@@ -189,12 +193,14 @@
 .gallery-row{
     display: flex;
 }
-
+.gallery h1{
+    font-size: 48px;
+}
 .gallery-img1{
     width: 25%;
     margin: 1px 1px;
     height: 350px;
-    background: url(../images/tab01-img-1.png);
+    background: url(../images/gallery-img-1.png);
     background-size: cover;
     background-position: center;
 }
@@ -202,7 +208,7 @@
     width: 25%;
     margin: 1px 1px;
     height: 350px;
-    background: url(../images/tab01-img-1.png);
+    background: url(../images/gallery-img-2.png);
     background-size: cover;
     background-position: center;
 }
@@ -210,7 +216,7 @@
     width: 25%;
     margin: 1px 1px;
     height: 350px;
-    background: url(../images/tab01-img-1.png);
+    background: url(../images/gallery-img-3.png);
     background-size: cover;
     background-position: center;
 }
@@ -218,7 +224,103 @@
     width: 25%;
     margin: 1px 1px;
     height: 350px;
-    background: url(../images/tab01-img-1.png);
+    background: url(../images/gallery-img-4.png);
+    background-size: cover;
+    background-position: center;
+}
+.gallery-img5{
+    width: 25%;
+    margin: 1px 1px;
+    height: 350px;
+    background: url(../images/gallery-img-5.png);
+    background-size: cover;
+    background-position: center;
+}
+.gallery-img6{
+    width: 25%;
+    margin: 1px 1px;
+    height: 350px;
+    background: url(../images/gallery-img-6.png);
+    background-size: cover;
+    background-position: center;
+}
+.gallery-img7{
+    width: 25%;
+    margin: 1px 1px;
+    height: 350px;
+    background: url(../images/gallery-img-7.png);
+    background-size: cover;
+    background-position: center;
+}
+.gallery-img8{
+    width: 25%;
+    margin: 1px 1px;
+    height: 350px;
+    background: url(../images/gallery-img-8.png);
+    background-size: cover;
+    background-position: center;
+}
+.gallery-img9{
+    width: 25%;
+    margin: 1px 1px;
+    height: 350px;
+    background: url(../images/gallery-img-13.png);
+    background-size: cover;
+    background-position: center;
+}
+.gallery-img10{
+    width: 25%;
+    margin: 1px 1px;
+    height: 350px;
+    background: url(../images/gallery-img-14.png);
+    background-size: cover;
+    background-position: center;
+}
+.gallery-img11{
+    width: 25%;
+    margin: 1px 1px;
+    height: 350px;
+    background: url(../images/gallery-img-12.png);
+    background-size: cover;
+    background-position: center;
+}
+.gallery-img12{
+    width: 25%;
+    margin: 1px 1px;
+    height: 350px;
+    background: url(../images/gallery-img-11.png);
+    background-size: cover;
+    background-position: center;
+}
+.gallery-img13{
+    width: 25%;
+    margin: 1px 1px;
+    height: 350px;
+    background: url(../images/gallery-img-9.png);
+    background-size: cover;
+    background-position: center;
+}
+.gallery-img14{
+    width: 25%;
+    margin: 1px 1px;
+    height: 350px;
+    background: url(../images/gallery-img-10.png);
+    background-size: cover;
+    background-position: center;
+}
+.gallery-img15{
+    width: 25%;
+    margin: 1px 1px;
+    height: 350px;
+    background: url(../images/gallery-img-15.png);
+    background-size: cover;
+    background-position: center;
+}
+.gallery-img16{
+    width: 25%;
+    margin: 1px 1px;
+    height: 350px;
+    background: url(../images/gallery-img-16.png);
     background-size: cover;
     background-position: center;
 }
