--- a/onepage/css/mastar.css
+++ b/onepage/css/mastar.css
@@ -11,6 +11,47 @@
 .logo a img{
     width: 78px;
     height: 68px;
+    margin: 15px 35px;
+}
+.nav_btn{
+    display: none;
+}
+.button{
+    display: flex;
+    float: right;
+    position: relative;
+    transition: .3s ease-in-out;
+    width: 50px;
+    height: 50px;
+    margin: 25px 10px 0;
+}
+.button span{
+    position: absolute;
+    height: 8px;
+    border-radius: 4px;
+    width: 100%;
+    background:#fff;
+    top: 0;
+    transition: 0.2s;
+}
+.button span:nth-child(1){
+    top: 0;
+}
+.button span:nth-child(2),.button span:nth-child(3){
+    top: 20px;
+}
+.button span:nth-child(4){
+    top: 40px;
+}
+.button.active span:nth-child(1),.button.active span:nth-child(4){
+    opacity: 0;
+}
+
+.button.active span:nth-child(2){
+    transform: rotate(45deg);
+}
+.button.active span:nth-child(3){
+    transform: rotate(-45deg);
 }
 .bg-black{
     background-color: rgba(0,0,0,0.5);
@@ -39,7 +80,6 @@
     padding: 20% 0;
 
 }
-
 @media(max-width:767px){
     .sec01-warp{
         display: flex;
@@ -50,8 +90,11 @@
     .menu_box>.logo{
         display: none;
     }
-    .nav{
+    .nav li{
         display: none;
+    }
+    .nav_btn{
+        display: block;
     }
 }
 
@@ -471,7 +514,17 @@
 /* section04  */
 	
 #section05{
-    width:100%; 
+    width:100%;
+    font-family: 'Binggrae';
+    position: relative;
+}
+.sec05-title h1{
+    text-align: center;
+    font-size: 48px;
+}
+.map{
+    width: 70%;
+    height: 300px;
 }
 
 
@@ -488,28 +541,23 @@
     position:fixed; 
     transition:all 0.5s ease-in-out; -webkit-transition:all 0.5s ease-in-out;
     z-index: 999;
+    display: flex;
+    justify-content: space-between;
 }
 	
 .fixed{
     background:rgba(0,0,0,0.5); 
     transition:all 0.5s ease-in-out;-webkit-transition:all 0.5s ease-in-out;
 }
-	
-.logo a{
-    font-size:46px; 
-    padding:15px 0 0 35px; 
-    float:left; 
-    color:#FFF; 
-    text-decoration:none;
-}
 			
 .menu_box > ul{
-    float:right; 
+    /* float:right;  */
     padding:0 35px 0 0;
+    display: flex;
 }
 			
 .menu_box li{
-    float:left; 
+    /* float:left;  */
     text-align:center; 
     width:100px; 
 }
