--- a/onepage/css/mastar.css
+++ b/onepage/css/mastar.css
@@ -5,9 +5,6 @@
     position: relative;
     background: url('../images/section01_bg.jpg');
 }
-
-
-
 .logo a img{
     width: 78px;
     height: 68px;
@@ -119,8 +116,12 @@
     width: 50%;
     line-height: 60px;
 }
-.text-warp h1:first-child{
+.text-warp h1{
     font-size: 48px;
+}
+.text-warp p{
+    margin-top: 20px;
+    font-size: 30px;
 }
 .img-warp{
     width: 50%;
@@ -204,7 +205,14 @@
     .img-warp{
         width: 100%;
     }
-    
+    .tab1-sub-txt h1,.tab2-sub-txt h1,.tab3-sub-txt h1{
+        font-size: 20px;
+        margin-top: 10px;
+    }
+    .tab1-sub-txt p,.tab2-sub-txt p,.tab3-sub-txt p{
+        font-size: 14px;
+        line-height: 30px;
+    }
 }
 
 
@@ -226,8 +234,7 @@
 
 /* section02	 */
 #section03{
-    width:100%;     
-    /* background:#9F0; */
+    width:100%;
     font-family: 'Binggrae';
 }
 
@@ -520,17 +527,35 @@
     width:100%;
     font-family: 'Binggrae';
     position: relative;
+
 }
 .sec05-title h1{
+    color: #fff;
     text-align: center;
     font-size: 48px;
+    padding-top: 150px;
+    padding-bottom: 50px;
 }
 .map{
-    width: 70%;
+    width:100%;
     height: 300px;
+    background-color: rosybrown;
+
+}
+.bg-black2{
+    width: 25%;
+    padding-bottom: 150px;
+    background: rgba(0, 0, 0, 0.6);
 }
 
 
+
+@media(max-width:767px){
+    .map_box{
+        width: 80%;
+        height: 300px;
+    }
+}
 
 
 
