--- a/onepage/css/mastar.css
+++ b/onepage/css/mastar.css
@@ -527,33 +527,94 @@
     width:100%;
     font-family: 'Binggrae';
     position: relative;
-
+    display: flex;
 }
-.sec05-title h1{
+.sec05_title h1{
     color: #fff;
-    text-align: center;
     font-size: 48px;
-    padding-top: 150px;
-    padding-bottom: 50px;
 }
-.map{
-    width:100%;
-    height: 1080px;
-    background-color: rosybrown;
-
+#map{
+    width:75%;
 }
 .bg-black2{
     width: 25%;
-    padding-bottom: 150px;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.4);
+    color: #fff;
+    padding-left: 20px;
+    padding-top: 150px;
+    padding-bottom: 300px;
+}
+.address{
+    padding-top: 150px;
+}
+.address h2,.bus h2,.call h2{
+    font-size: 24px;
+    padding-left: 10px;
+}
+.address p,.bus p,.call p{
+    font-size: 18px;
+    padding: 30px 0 30px 20px;
+}
+.bus_sub{
+    display: flex;
+}
+.bus_sub h3{
+    font-size: 18px;
+    padding-left: 20px;
+    padding-top: 5px;
+}
+.bus_sub p{
+    font-size: 16px;
+    padding: 0;
+    padding-left: 20px;
+}
+.call{
+    padding-top: 30px;
 }
 
 
 
 @media(max-width:767px){
-    .map_box{
-        width: 80%;
-        height: 300px;
+    #section05{
+        flex-direction: column;
+    }
+    #map{
+        width:100%;
+        padding-bottom: 550px;
+    }
+    .bg-black2{
+        width: 100%;
+        padding: 0;
+        padding-top: 100px;
+        padding-bottom: 30px;
+    }
+    .sec05_title h1{
+        padding-left: 20px;
+    }
+    .address{
+        display: flex;
+        padding-top: 40px;
+        padding-bottom: 30px;
+        padding-left: 30px;
+    }
+    .call{
+        display: flex;
+        padding-top: 0;
+        padding-bottom: 30px;
+        padding-left: 30px;
+    }
+    .bus{
+        display: flex;
+        padding-bottom: 30px;
+        padding-left: 30px;
+    }
+    .bus_sub p{
+        padding-top: 20px;
+    }
+    .address p,.bus p,.call p{
+        font-size: 18px;
+        padding-top: 5px;
+        padding-bottom: 0;
     }
 }
 
