--- a/onepage/css/mastar.css
+++ b/onepage/css/mastar.css
@@ -15,7 +15,6 @@
 }
 .bg-black{
     background-color: rgba(0,0,0,0.5);
-    /* position: absolute; */
     width: 100%;
 }
 .main-title{
@@ -40,7 +39,11 @@
     padding: 20% 0;
 
 }
-@media(max-width:767px){
+@media(max-width:768px){
+    body{
+        overflow-x: hidden;
+    }
+
     .sec01-warp{
         display: flex;
         flex-direction: column;
@@ -60,13 +63,36 @@
         display: block;
     }
 }
-@media(max-width:375px){
-    *{
-        overflow-x: hidden;
-    }
+@media(max-width:500px){
     #section01{
         background-size: cover;
         background-position: center;
+    }
+    .logo{
+        margin-top: 100px;
+    }
+    .logo img{
+        width: 220px;
+        height: 200px;
+    }
+    .main-title h1:first-child{
+        font-size: 30px;
+    }
+    .main-title h1:last-child{
+        font-size: 40px;
+        font-weight: bold;
+    }
+    .bg-black{
+        padding-bottom: 80px;
+    }
+}
+@media(max-width:375px){
+    #section01{
+        background-size: cover;
+        background-position: center;
+    }
+    .logo{
+        margin-top: 100px;
     }
     .logo img{
         width: 120px;
@@ -79,6 +105,9 @@
         font-size: 20px;
         font-weight: bold;
     }
+    .bg-black{
+        padding-bottom: 150px;
+    }
 }
 
 
@@ -87,6 +116,7 @@
     width:100%; 
     position: relative;
     font-family: 'Binggrae';
+    background-color: #fffae8;
 }
 
 .sec02-warp{
@@ -200,6 +230,46 @@
         line-height: 30px;
     }
 }
+@media(max-width:500px){
+    .warp{
+        width: 100%;
+    }
+    .sec02-warp{
+        width: 90% !important;
+        display: flex;
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
+    }
+    .text-warp{
+        width: 100%;
+    }
+    .text-warp h1{
+        font-size: 30px;
+    }
+    .text-warp p{
+        margin-top: 0;
+        font-size: 18px;
+        line-height: 30px;
+    }
+    .img-warp{
+        width: 100%;
+        height: 300px;
+    }
+    .tab1-main-txt,.tab2-main-txt,.tab3-main-txt{
+        padding: 0;
+    }
+    .tab-img-1,.tab-img-2,.tab-img-3{
+        height: 150px;
+    }
+    .tab1-sub-txt h1,.tab2-sub-txt h1,.tab3-sub-txt h1{
+        font-size: 12px;
+        margin-top: 20px;
+    }
+    .tab1-sub-txt p,.tab2-sub-txt p,.tab3-sub-txt p{
+        font-size: 10px;
+    }
+}
 @media(max-width:375px){
     .warp{
         width: 100%;
@@ -260,6 +330,7 @@
 #section03{
     width:100%;
     font-family:'Binggrae';
+    background-color: #fffae8;
 }
 
 .mi{
@@ -440,6 +511,29 @@
         display: none;
     }
 }
+@media(max-width:500px){
+    .sec03-warp{
+        width: 90%;
+    }
+    .gallery h1{
+        font-size: 30px;
+    }
+    .gallery-img1,.gallery-img2,.gallery-img3,.gallery-img4,.gallery-img5,.gallery-img6,.gallery-img7,.gallery-img8,.gallery-img9,.gallery-img10,.gallery-img11,.gallery-img12,.gallery-img13,.gallery-img14,.gallery-img15,.gallery-img16{
+        height: 150px;
+    }
+    .gallery-bg{
+        height: 150px;
+    }
+    .gallery-bg:hover{
+        opacity: 1;
+    }
+    .click-btn{
+        padding: 40px;
+    }
+    .click-btn h1{
+        font-size: 24px;
+    }
+}
 @media(max-width:375px){
     .sec03-warp{
         width: 90%;
@@ -476,6 +570,7 @@
 #section04{
     width:100%; 
     font-family: 'Binggrae';
+    background-color: #fffae8;
 }
 
 
@@ -549,51 +644,81 @@
 }
 
 
-@media(max-width:767px){
+@media(max-width:768px){
     .page4{
         width: 100%;
     }
     .show-content,.view-content{
-        width: 50%;
+        width: 100%;
     }
+
     .view-img,.show-img{
-        width: 50%;
+        width: 100%;
+        margin: 0 auto;
     }
     .view-content h1,.show-content h1{
         font-size: 30px;
     }
     .show-content p,.view-content p{
         font-size: 22px;
+    }
+    .show-content{
+        height: 150px;
+    }
+    .view-content{
+        height: 150px;
+    }
+}
+@media(max-width:500px){
+    .title4{
+        font-size: 30px;
+        padding-bottom: 50px;
+    }
+    .show-content{
+        height: 100px;
+    }
+    .view-content{
+        height: 100px;
+    }
+    .show-img,.view-img{
+        width: 90%;
+        height: 200px;
+        margin: 0 auto;
+    }
+    .view-content h1,.show-content h1{
+        margin-top: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
+        font-size: 24px;
+    }
+    .show-content p,.view-content p{
+        font-size: 16px;
+        margin: 0 20px;
     }
 }
 @media(max-width:375px){
-    .page4{
-        width: 100%;
-    }
-    .show-content,.view-content{
-        width: 50%;
-    }
-    .view-img,.show-img{
-        width: 50%;
-    }
-    .view-content h1,.show-content h1{
-        font-size: 30px;
-    }
-    .show-content p,.view-content p{
-        font-size: 22px;
-    }
-}
-@media(max-width:360px){
     .title4{
         font-size: 20px;
+        padding-bottom: 50px;
+    }
+    .show-img,.view-img{
+        height: 200px;
     }
     .view-content h1,.show-content h1{
+        margin-top: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
         font-size: 18px;
     }
     .show-content p,.view-content p{
         font-size: 12px;
     }
-    .slide_box1{}
+    .show-content p{
+        margin-left: 10px;
+    }
+    .view-content p{
+        margin-right: 10px;
+    }
 }
 
 
@@ -607,6 +732,7 @@
     font-family: 'Binggrae';
     position: relative;
     display: flex;
+    background-color: #fffae8;
 }
 .sec05_title h1{
     color: #fff;
@@ -653,7 +779,7 @@
 
 
 
-@media(max-width:767px){
+@media(max-width:768px){
     #section05{
         flex-direction: column;
     }
@@ -696,17 +822,66 @@
         padding-bottom: 0;
     }
 }
+@media(max-width:500px){
+    #section05{
+        flex-direction: column;
+    }
+    #map{
+        width:100%;
+        padding-bottom: 250px;
+    }
+    .bg-black2{
+        padding-top: 50px;
+    }
+    .sec05_title h1{
+        font-size: 30PX;
+        padding-left: 10px;
+    }
+    .address{
+        display: flex;
+        padding-top: 40px;
+        padding-bottom: 30px;
+        padding-left: 10px;
+    }
+    .call{
+        display: flex;
+        padding-top: 0;
+        padding-bottom: 30px;
+        padding-left: 10px;
+    }
+    .bus{
+        display: flex;
+        padding-bottom: 30px;
+        padding-left: 10px;
+    }
+    .bus_sub p{
+        padding-top: 10px;
+    }
+    .address p,.bus p,.call p{
+        font-size: 12px;
+        padding-top: 2px;
+        padding-bottom: 0;
+    }
+    .address h2,.bus h2,.call h2{
+        font-size: 16px;
+    }
+    .bus_sub{
+        line-height: 20px;
+    }
+    .bus_sub h3{
+        font-size: 12px;
+    }
+}
 @media(max-width:375px){
     #section05{
         flex-direction: column;
     }
     #map{
         width:100%;
-        padding-bottom: 200px;
+        padding-bottom: 250px;
     }
     .bg-black2{
-        padding-top: 70px;
-        padding-bottom: 30px;
+        padding-top: 50px;
     }
     .sec05_title h1{
         font-size: 20PX;
@@ -740,14 +915,13 @@
     .address h2,.bus h2,.call h2{
         font-size: 12px;
     }
+    .bus_sub{
+        line-height: 20px;
+    }
     .bus_sub h3{
         font-size: 8px;
     }
 }
-
-
-
-
 /* section05 */
 
                         
