--- a/onepage/css/mastar.css
+++ b/onepage/css/mastar.css
@@ -73,7 +73,7 @@
         padding-bottom: 80px;
     }
 }
-@media(max-width:375px){
+@media(max-width:360px){
     #section01{
         background-size: cover;
         background-position: center;
@@ -272,12 +272,12 @@
         font-size: 10px;
     }
 }
-@media(max-width:375px){
+@media(max-width:360px){
     .warp{
         width: 100%;
     }
     .sec02-warp{
-        width: 90% !important;
+        width: 100% !important;
         display: flex;
         flex-direction: column;
         /* justify-content: center; */
@@ -298,16 +298,40 @@
         width: 100%;
     }
     .tab1-main-txt,.tab2-main-txt,.tab3-main-txt{
-        padding: 0;
+        margin: 0 ;
     }
     .tab-img-1,.tab-img-2,.tab-img-3{
         height: 100px;
     }
+    .tab1-sub-txt,.tab2-sub-txt,.tab3-sub-txt{
+        width: 60%;
+        text-align: center;
+    }
     .tab1-sub-txt h1,.tab2-sub-txt h1,.tab3-sub-txt h1{
-        font-size: 8px;
+        width: 100px;
+        font-size: 6px;
     }
     .tab1-sub-txt p,.tab2-sub-txt p,.tab3-sub-txt p{
         font-size: 6px;
+        line-height: 20px;
+    }
+    .tab3-call{
+        margin-top: 19px;
+    }
+    .tab2-sub-txt h1{
+        margin-top: 30px;
+    }
+    .tab2-sub-txt{
+        padding-bottom: 15px;
+    }
+    .tab2-sub-txt p{
+        margin-top: 10px;
+    }
+    .tab1-main-txt{
+        padding: 5px 0 ;
+    }
+    .tab3-main-txt{
+        padding: 10px 0;
     }
 }
 
@@ -730,9 +754,7 @@
         margin: 0 auto;
     }
     .view-content h1,.show-content h1{
-        margin-top: 10px;
-        margin-left: 10px;
-        margin-right: 10px;
+
         font-size: 24px;
     }
     .show-content p,.view-content p{
@@ -740,18 +762,19 @@
         margin: 0 20px;
     }
 }
-@media(max-width:375px){
+@media(max-width:360px){
     .title4{
         font-size: 20px;
         padding-bottom: 50px;
     }
     .show-img,.view-img{
+        width: 100%;
         height: 200px;
     }
     .view-content h1,.show-content h1{
-        margin-top: 10px;
+        /* margin-top: 10px;
         margin-left: 10px;
-        margin-right: 10px;
+        margin-right: 10px; */
         font-size: 18px;
     }
     .show-content p,.view-content p{
@@ -935,7 +958,7 @@
         font-size: 12px;
     }
 }
-@media(max-width:375px){
+@media(max-width:360px){
     #section05{
         flex-direction: column;
     }
@@ -971,8 +994,9 @@
         padding-top: 10px;
     }
     .address p,.bus p,.call p{
-        font-size: 10px;
+        font-size: 6px;
         padding-top: 2px;
+        padding-left: 15px;
         padding-bottom: 0;
     }
     .address h2,.bus h2,.call h2{
@@ -983,6 +1007,7 @@
     }
     .bus_sub h3{
         font-size: 8px;
+        padding-left: 15px;
     }
 }
 /* section05 */
