--- a/onepage/css/navi.css
+++ b/onepage/css/navi.css
@@ -56,8 +56,8 @@
 }
 
 .menus-all>a:hover {
-  color: #fcbe32;
-  border-bottom: solid 3px #f7931e;
+  color: #fff;
+  border-bottom: solid 3px #fff;
   transform: scaleX(0);
   transition: transform 250ms ease-in-out;
 }
@@ -65,7 +65,7 @@
 .menus-all>a:after {
   display: block;
   content: '';
-  border-bottom: solid 2px #f7931e;
+  border-bottom: solid 2px #fff;
   transform: scaleX(0);
   transition: transform 250ms ease-in-out;
 }
